# amazon-freertos-examples

./: .gitmodules  CMakeLists.txt  README.md
components/foo/: CMakeLists.txt
components/foo/src/: foo.c
src/: main.c
